fix vertical alignment in ProductCard component

--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -1,8 +1,8 @@
 .product_card {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
   margin: 5px;
   border-radius: 3px;
   background-color: white;
@@ -33,7 +33,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 5px;
       font-family: 'Gruppo', cursive;
 
       .brand {
@@ -48,6 +48,7 @@
       }
     }
     .info {
+      
       text-align: center;
       .price {
         font-size: 32px;
